fix: post width on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -486,7 +486,7 @@ section#post {
     overflow: scroll;
   }
 
-  @media (width < 800) {
+  @media (width < 800px) {
     width: 90%;
   }
 }
